--- a/static/style.css
+++ b/static/style.css
@@ -73,3 +73,30 @@ a {
     display: inline-block;
     text-decoration: none;
 }
+
+.team-scores {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    gap: 30px;
+}
+
+.team {
+    text-align: center;
+    font-size: 24px;
+    border: 2px solid #000;
+    padding: 20px;
+    width: 200px;
+}
+
+.team h2 {
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+
+input[type="number"] {
+    font-size: 24px;
+    padding: 5px;
+    width: 80px;
+    text-align: center;
+}
