--- a/static/styles.css
+++ b/static/styles.css
@@ -42,6 +42,12 @@ h1 {
     text-decoration: none;
 }
 
+.opened {
+    background-color: white;
+    color: white; 
+    pointer-events: none; 
+}
+
 #question-modal {
     position: fixed;
     top: 50%;
@@ -99,4 +105,76 @@ input[type="number"] {
     padding: 5px;
     width: 80px;
     text-align: center;
+}
+
+question-body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    font-size: 24px; 
+    justify-content: center; 
+    text-align: center;
+    align-items: center;
+    display: flex;
+}
+
+.question-page {
+    position:relative;
+    justify-content: center; 
+    max-width: 600px;
+    width: 100%;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
+.category-title {
+    font-size: 2.5em;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.question-text {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+    color: #666;
+}
+
+.question-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.back-link {
+    position: absolute;
+    top: 10px; 
+    left: 30px; 
+    font-size: 1.2em;
+    color: #666;
+    text-decoration: none;
+    transition: color 0.3s; 
+}
+
+#reveal-answer-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+    background-color: #f1c40f;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+#reveal-answer-button:hover {
+    background-color: #d4b227;
+}
+
+#answer-section {
+    margin-top: 20px;
+    font-size: 1.5em;
+    color: #333;
 }
